Fix: direct tickets details: align 'overall' with table

--- a/src/custom/styles/screens/ReferralTicketsScreen.pcss
+++ b/src/custom/styles/screens/ReferralTicketsScreen.pcss
@@ -39,6 +39,9 @@
     flex-wrap: wrap;
   }
 
+  .table-margin {
+    margin-left: 30px;
+  }
   table {
     border-spacing: 0;
     margin-left: 30px;
@@ -508,6 +511,9 @@
   
   .pg-referral-tickets {
     table {
+      margin-left: 0;
+    }
+    .table-margin {
       margin-left: 0;
     }
     nav {
