Feature: Add footer from site to baseapp referral page

--- a/src/custom/styles/screens/ReferralScreen.pcss
+++ b/src/custom/styles/screens/ReferralScreen.pcss
@@ -1387,42 +1387,87 @@
                    color: rgba(255, 255, 255, 0.4);
                }
            }
-        & .social-block {
 
-            & .social-links {
+        & .footer-row {
             display: flex;
+            flex-direction: row;
             flex-wrap: wrap;
-            width: 200px;
-             list-style-type: none;
-            padding: 0;
+            justify-content: space-between;
 
-            & .icon {
-                width: 36px;
-                height: 36px;
-                background: rgba(255, 255, 255, 0.3);
-                border-radius: 50%; 
-                img {
-                    margin: 10px;
+            .footer-link-list {
+                padding-bottom: 2em;
+                padding-top: 1em;
+                display: flex;
+                flex-direction: column;
+                justify-content: flex-start;
+                list-style-type: none;
+                padding: 0;
+
+                li {
+                    padding-top: 12px;
                 }
+
+                a {
+                    text-decoration: none;
+                    color: rgba(255, 255, 255, 0.8);
+                    /* font-family: 'IBM Plex Arabic Regular'; */
+                    font-size: 13px;
+                    letter-spacing: 1px;
+  }
             }
-            li {
-                margin: 4px;
+           
+            .address {
+                width: 250px;
+                p {
+                    font-size: 13px;
+                    color: #FFFFFF99;
+                }
+
+            }
+            .social-block {
+
+                 .social-links {
+                    display: flex;
+                    flex-wrap: wrap;
+                    width: 200px;
+                    list-style-type: none;
+                    padding: 0;
+
+                 .icon {
+                     width: 36px;
+                    height: 36px;
+                    background: rgba(255, 255, 255, 0.2);
+                    border-radius: 50%; 
+                    img {
+                        margin: 10px;
+                    }
+                }
+                li {
+                    margin: 4px;
                 
+                }
+
             }
+                @media screen and (max-width: 500px) {
+                    & h5 {
+                        text-align: center;
+                    }
 
-        }
-        @media screen and (max-width: 700px) {
-              & h5 {
-                  text-align: center;
-              }
+                    & .social-links {
+                        width: 100%;
+                        justify-content: center;
+                    }
+                    
+                }
+            }  
 
-                & .social-links {
-               width: 100%;
-               justify-content: center;
-           }
-        }
-
-        }
+            @media screen and (max-width: 500px) {
+                    & .address {
+                        width: 100%;
+                    }
+            }          
+        }   
+        
         
 
          
