Fix: Change link color

--- a/src/custom/styles/screens/ReferralScreen.pcss
+++ b/src/custom/styles/screens/ReferralScreen.pcss
@@ -1412,6 +1412,10 @@
                     padding-top: 12px;
                 }
 
+                .gold {
+                    color: #FFD541;
+                }
+
                 a {
                     text-decoration: none;
                     color: rgba(255, 255, 255, 0.8);
