Fix: CE-271 Add padding into plus style

--- a/src/custom/styles/screens/ReferralScreen.pcss
+++ b/src/custom/styles/screens/ReferralScreen.pcss
@@ -599,6 +599,11 @@
                         transform: translateY(7px);
                     }
                 }
+                @media (max-width: 576px) {
+                    & .plus {
+                        padding-right: 15px;
+                    }
+                }
             }
         }
 
