--- a/src/custom/styles/screens/ReferralTicketsScreen.pcss
+++ b/src/custom/styles/screens/ReferralTicketsScreen.pcss
@@ -479,6 +479,7 @@
   .pg-referral-tickets {
     .container {
       width: 100vw;
+      max-width: 100%;
       padding: 0 20px;
       box-sizing: border-box;
 
