--- a/src/custom/styles/screens/ReferralScreen.pcss
+++ b/src/custom/styles/screens/ReferralScreen.pcss
@@ -106,7 +106,7 @@
             top: 165px;
             right: 0;
             font-weight: 500;
-            position: absolute;
+            position: relative;
         }
         a {
             color: black;
@@ -184,7 +184,7 @@ h4 {
 
 #banner .button-container {
   position: absolute;
-  top: 224px;
+  top: 227px;
 }
 
 #banner .grab {
@@ -237,7 +237,7 @@ h4 {
     margin: 25px auto;
     position: relative;
     top: unset;
-    width: 224px;
+    width: 227px;
   }
 
   #banner .grab {
@@ -469,7 +469,7 @@ h4 {
 
 #how-to .button-container {
   margin: 51px auto 0;
-  width: 224px;
+  width: 227px;
   padding-bottom: 84px;
 }
 
@@ -651,7 +651,7 @@ h4 {
 }
 
 #prizes .button-container {
-  width: 224px;
+  width: 227px;
   margin: 0 auto;
 }
 
@@ -809,7 +809,7 @@ h4 {
 }
 
 #video .button-container {
-  width: 224px;
+  width: 227px;
   position: relative;
   bottom: -12px;
   left: calc(50% - 110px);
@@ -835,6 +835,7 @@ h4 {
 }
 
    #footer { 
+        padding: 0 20px;
         background: black;
         & > div {
             box-sizing: border-box;
