Feature: Add ref code input field

--- a/src/containers/ReferralProgram/ReferralProgram.pcss
+++ b/src/containers/ReferralProgram/ReferralProgram.pcss
@@ -47,4 +47,19 @@
       }
     }
   }
+  .ref-code-input-field {
+    width: 50%;
+    @media screen and (max-width: 600px) {
+      max-width: 100%;
+    }
+    a {
+      color: white;
+      font-size: 16px;
+      text-decoration: none;
+    }
+    input {
+      font-size: 16px;
+    }
+
+  }
 }
