--- a/src/containers/ReferralProgram/ReferralProgram.pcss
+++ b/src/containers/ReferralProgram/ReferralProgram.pcss
@@ -49,8 +49,12 @@
   }
   .ref-code-input-field {
     width: 50%;
-    @media screen and (max-width: 600px) {
-      max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    @media screen and (max-width: 780px) {
+      width: 100%;
     }
     a {
       color: white;
@@ -59,6 +63,9 @@
     }
     input {
       font-size: 16px;
+    }
+    .ref-code-button {
+      margin: 8px 0;
     }
 
   }
