Feature: CE-179 add beta in logo

--- a/src/containers/Header/Header.pcss
+++ b/src/containers/Header/Header.pcss
@@ -12,11 +12,13 @@ header {
   }
 
   &__logo {
-    img {
+    span {
       width: calc(var(--gap) * 19.67);
       height: calc(var(--gap) * 3.5);
       vertical-align: middle;
       border-style: none;
+      display: flex;
+      align-items: center;
     }
   }
 
