Fix: Change refcode input component text

--- a/src/containers/ReferralProgram/ReferralProgram.pcss
+++ b/src/containers/ReferralProgram/ReferralProgram.pcss
@@ -56,10 +56,15 @@
     @media screen and (max-width: 780px) {
       width: 100%;
     }
-    a {
+    p, a {
       color: white;
       font-size: 16px;
-      text-decoration: none;
+    }
+    a {
+      color: rgb(140, 196, 168);
+      &:hover {
+         color: rgb(176, 224, 200);
+      }
     }
     input {
       font-size: 16px;
