--- a/src/containers/ReferralProgram/ReferralProgram.pcss
+++ b/src/containers/ReferralProgram/ReferralProgram.pcss
@@ -55,13 +55,31 @@
     align-items: center;
     @media screen and (max-width: 780px) {
       width: 100%;
+     }
+    &-link {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
     }
-    p, a {
+    p{
       color: white;
       font-size: 16px;
+      padding: 5px 5px;
+      margin: 0;
+      @media screen and (max-width: 400px) {
+      font-size: 14px;
+      padding: 0;
+
+    }
+    @media screen and (max-width: 326px) {
+      font-size: 12px;
+      padding: 0;
+
+    }
     }
     a {
       color: rgb(140, 196, 168);
+      font-size: 16px;
       &:hover {
          color: rgb(176, 224, 200);
       }
