--- a/src/components/SignUp/SignUp.pcss
+++ b/src/components/SignUp/SignUp.pcss
@@ -57,6 +57,10 @@
     bottom: 23px;
     left: 23px;
     box-sizing: border-box;
+    @media screen and (max-width: 768px) {
+      top: 80px !important;
+      font-size: 12px !important;
+    }
   }
 
   & > * {
@@ -234,5 +238,8 @@
     z-index: 2;
     right: 0;
     left: 0;
+    @media screen and (max-width: 768px) {
+      padding-top: 15px;
+    }
   }
 }
