Fix: resolves #374. elements positioning

--- a/src/custom/styles/screens/ReferralTicketsScreen.pcss
+++ b/src/custom/styles/screens/ReferralTicketsScreen.pcss
@@ -58,10 +58,6 @@
       & td {
         padding: 20px 8px 20px 0;
         color: #ccc;
-
-        &:last-of-type {
-          text-align: right;
-        }
       }
     }
 
@@ -79,10 +75,6 @@
           padding: 20px 8px 20px 0;
           border-top: 1px solid #ccc;
           border-collapse: collapse;
-
-          &:last-of-type {
-            text-align: right;
-          }
 
           & span.count {
             font-size: 18px;
@@ -135,10 +127,6 @@
 
             padding: 0 8px 20px 0;
 
-            &:last-of-type {
-
-              text-align: right;
-            }
           }
         }
       }
@@ -385,7 +373,7 @@
 
     & .container:first-of-type {
       & .left {
-        flex-grow: 1;
+        width: 750px;
 
         & h2 {
           border-color: #FFD541;
@@ -393,7 +381,7 @@
       }
 
       & .right {
-        line-height: 58px;
+        padding-top: 30px;
       }
     }
     a.active {
