Fix: move filters from right to left

--- a/src/custom/styles/screens/ReferralTicketsScreen.pcss
+++ b/src/custom/styles/screens/ReferralTicketsScreen.pcss
@@ -391,12 +391,12 @@
       }
     }
 
-    @media (max-width: 520px) {
+    @media (max-width: 550px) {
       & .container:first-of-type {
-        justify-content: flex-end;
+        justify-content: flex-start;
 
         & .right {
-          padding-top: unset;
+          padding-left: 30px;
         }
       }
     }
