--- a/src/custom/styles/style.pcss
+++ b/src/custom/styles/style.pcss
@@ -4,3 +4,4 @@
 @import "./screens/style.pcss";
 @import "./containers/style.pcss";
 @import "./components/style.pcss";
+@import "../components/Referral/Button/button.pcss";
