Fix: change sidebar links styles (#1597)

--- a/src/styles/themes/light.pcss
+++ b/src/styles/themes/light.pcss
@@ -70,6 +70,7 @@
   --beneficiaries-primary-0-04: rgba(0, 0, 0, 0.04);
 
   /* sidebar */
+  --nav-item-selected: #e6e6e6;
   --nav-item-hover: #f0f0f0;
 
   --loader-base-color: var(--back-bg);
