--- a/src/styles/themes/basic.pcss
+++ b/src/styles/themes/basic.pcss
@@ -70,6 +70,7 @@
   --beneficiaries-primary-0-04: rgba(255, 255, 255, 0.04);
 
   /* sidebar */
+  --nav-item-selected: #324167;
   --nav-item-hover: #3a4c79;
 
   --loader-base-color: var(--back-bg);
