--- a/src/components/OrderForm/OrderForm.pcss
+++ b/src/components/OrderForm/OrderForm.pcss
@@ -5,6 +5,11 @@
     margin-bottom: calc(var(--gap) * 2);
     width: 100%;
 
+    &-space {
+        width: 100%;
+        padding-top: 20px;
+    }
+
     .cr-dropdown,
     .cr-order-input,
     &__percentage-buttons,
