--- a/src/containers/OrderBook/OrderBook.pcss
+++ b/src/containers/OrderBook/OrderBook.pcss
@@ -87,6 +87,13 @@
           }
         }
       }
+    
+    &-background {
+        &__row {
+          padding: 22px 0;
+          min-width: 1px;
+        }
+      }
     }
 
     &__small {
