Feature: change profile verification (#1772)
* Feature: add custom profile verification container
* Feature: change profile verification styles
* Feature: add withdrawal limit to profile
* Feature: hide upgrade level link on max level

--- a/src/custom/styles/containers/style.pcss
+++ b/src/custom/styles/containers/style.pcss
@@ -1,8 +1,9 @@
 @import "./EstimatedValue.pcss";
-@import "./MarketsList.pcss";
 @import "./MarketSelector.pcss";
+@import "./MarketsList.pcss";
 @import "./NavBar.pcss";
+@import "./OpenOrdersPanel.pcss";
 @import "./Order.pcss";
 @import "./OrderBook.pcss";
+@import "./ProfileVerification.pcss";
 @import "./ProgressLabel.pcss";
-@import "./OpenOrdersPanel.pcss";
