--- a/src/custom/styles/screens/ProfileScreen.pcss
+++ b/src/custom/styles/screens/ProfileScreen.pcss
@@ -64,6 +64,10 @@
     }
   }
 
+  &__box {
+    padding: calc(var(--gap) * 2) calc(var(--gap) * 4) calc(var(--gap) * 4) calc(var(--gap) * 1);
+  }
+
   .pg-exchange-modal-submit-body {
     text-align: center;
   }
