--- a/src/custom/styles/containers/style.pcss
+++ b/src/custom/styles/containers/style.pcss
@@ -5,5 +5,6 @@
 @import "./OpenOrdersPanel.pcss";
 @import "./Order.pcss";
 @import "./OrderBook.pcss";
+@import "./ProfilePartial.pcss";
 @import "./ProfileVerification.pcss";
 @import "./ProgressLabel.pcss";
