--- a/src/custom/styles/screens/ConfirmScreen.pcss
+++ b/src/custom/styles/screens/ConfirmScreen.pcss
@@ -1,10 +1,15 @@
 .pg-confirm {
   &__progress {
+    height: 75px;
+
     &-circle {
       &-1,
       &-2,
       &-3 {
         background: var(--kyc-circle-color);
+        height: 24px;
+        margin-top: 15px;
+        width: 24px;
 
         &:after {
           align-items: center;
@@ -17,6 +22,13 @@
           height: 100%;
           justify-content: center;
         }
+      }
+    }
+
+    &-line {
+      &-1,
+      &-2 {
+        margin: 15px 0 0 0;
       }
     }
 
@@ -51,5 +63,14 @@
         font-weight: normal;
       }
     }
+  }
+
+  &__title-text {
+    font-family: "Noto Sans SC";
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    top: 33px;
+    width: 72px;
   }
 }
