Feature: add integration with Idenfy (#1780)
* Feature: add kyc idenfy integration
* Feature: add idenfy kyc module

--- a/src/custom/styles/containers/style.pcss
+++ b/src/custom/styles/containers/style.pcss
@@ -1,4 +1,5 @@
 @import "./EstimatedValue.pcss";
+@import "./Idenfy.pcss";
 @import "./MarketSelector.pcss";
 @import "./MarketsList.pcss";
 @import "./NavBar.pcss";
