Feature: add deposit limit to profile (#1786)
* Feature: change profile user abilities
* Feature: add mobile styles for profile partial step
* Feature: add current deposits amount to profile
* Fix: add check on withdrawal history
* Fix: change deposit history props check

--- a/src/custom/styles/containers/ProfilePartial.pcss
+++ b/src/custom/styles/containers/ProfilePartial.pcss
@@ -196,3 +196,13 @@
     }
   }
 }
+
+@media screen and (max-width: 768px) {
+  .pg-confirm__content-profile-partial {
+    &-col {
+      &-row {
+        width: 100%;
+      }
+    }
+  }
+}
