Feature: change kyc documents and redirects (#1789)
* Feature: add custom documents container
* Feature: add pending labels checks
* Fix: remove live updating deposit limit
* Feature: add custom phone container
* Feature: change level updating by kyc steps
* Feature: change proof of residence kyc step
* Fix: move date check to helpers

--- a/src/custom/styles/containers/style.pcss
+++ b/src/custom/styles/containers/style.pcss
@@ -1,3 +1,4 @@
+@import "./Documents.pcss";
 @import "./EstimatedValue.pcss";
 @import "./Idenfy.pcss";
 @import "./MarketSelector.pcss";
@@ -6,6 +7,7 @@
 @import "./OpenOrdersPanel.pcss";
 @import "./Order.pcss";
 @import "./OrderBook.pcss";
+@import "./Phone.pcss";
 @import "./ProfilePartial.pcss";
 @import "./ProfileVerification.pcss";
 @import "./ProgressLabel.pcss";
