--- a/src/custom/styles/screens/ReferralScreen.pcss
+++ b/src/custom/styles/screens/ReferralScreen.pcss
@@ -853,6 +853,7 @@
             font-size: 11px;
             padding: 20px 0;
             border-top: 1px solid #ffffff55;
+            color: #FFFFFFAA;
         }
         h5 {
             color: white;
