--- a/src/custom/styles/screens/ReferralScreen.pcss
+++ b/src/custom/styles/screens/ReferralScreen.pcss
@@ -853,7 +853,9 @@
             font-size: 11px;
             padding: 20px 0;
             border-top: 1px solid #ffffff55;
-            color: #FFFFFFAA;
+           div {
+                color: white;
+           } 
         }
         h5 {
             color: white;
@@ -962,6 +964,7 @@
                 justify-content: center;
                 align-items: center;
                 text-align: center;
+                color: white;
             }
         }
         @media screen and (max-width: 580px) {
@@ -975,6 +978,7 @@
                 justify-content: center;
                 align-items: center;
                 text-align: center;
+                color: white;
             }
         }
     }
