--- a/src/containers/ReferralProgram/ReferralProgram.pcss
+++ b/src/containers/ReferralProgram/ReferralProgram.pcss
@@ -35,6 +35,7 @@
           background: var(--transparent);
           font-size: 14px;
           padding:  0 20px;
+          background: transparent;
         }
 
         .cr-copyable-text-field__button {
