--- a/src/components/EmailForm/EmailForm.pcss
+++ b/src/components/EmailForm/EmailForm.pcss
@@ -1,5 +1,5 @@
 .cr-email-form {
-  background: #1e2841;
+  background: var(--main-bg);
   max-width: 424px;
   min-height: 350px;
   box-shadow: 0 10px 15px rgba(0, 0, 0, 0.25);
@@ -9,18 +9,18 @@
   &__options-group {
     width: 100%;
     height: 58px;
-    border-bottom: 2px solid #657395;
+    border-bottom: 2px solid var(--text);
   }
 
   &__option {
-    background: #28334e;
+    background: var(--placeholder-text);
     display: inline-block;
     width: 100%;
     height: 58px;
   }
 
   &__option-inner {
-    background: var(--transparent);
+    background: transparent;
     width: 100%;
     height: 58px;
     margin: 0 auto;
@@ -40,7 +40,7 @@
   }
 
   & > * {
-    background: var(--transparent);
+    background: transparent;
   }
 
   &__error-message {
@@ -48,19 +48,20 @@
     font-size: calc(var(--gap) * 2.5);
     flex: 1;
     display: flex;
-    background: var(--transparent);
+    background: transparent;
     justify-content: center;
     align-items: center;
     min-height: calc(var(--gap) * 6);
   }
 
   &__group {
-    background: var(--transparent);
+    background: transparent;
+    margin-bottom: 20px;
     position: relative;
   }
 
   &__error {
-    background: var(--transparent);
+    background: transparent;
     margin-top: 5px;
     color: var(--color-red);
   }
@@ -71,7 +72,7 @@
     left: 10px;
     padding: 2px 6px;
     border-radius: 2px;
-    background: #1e2841;
+    background: var(--main-bg);
     color: var(--forgot-password-label-color);
   }
 
@@ -102,7 +103,7 @@
   &__button {
     margin-left: 0;
     height: 40px;
-    background: #2e4c80;
+    background: var(--button-normal);
     border-radius: 3px;
     font-style: normal;
     font-weight: normal;
@@ -114,12 +115,12 @@
   }
 
   &__loader {
-    background: var(--transparent);
+    background: transparent;
     min-height: calc(var(--gap) * 6);
   }
 
   &__button-wrapper {
-    background: var(--transparent);
+    background: transparent;
     min-height: calc(var(--gap) * 28);
     display: flex;
     flex-direction: column;
@@ -144,7 +145,7 @@
       height: 50px;
       padding: 0 10px;
       font-size: 12px;
-      border: 1px solid #737f92;
+      border: 1px solid var(--placeholder-text);
       box-sizing: border-box;
       border-radius: 4px;
     }
