--- a/src/components/SignIn/SignIn.pcss
+++ b/src/components/SignIn/SignIn.pcss
@@ -1,5 +1,5 @@
 .cr-sign-in-form {
-  background: #1e2841;
+  background: var(--main-bg);
   max-width: 424px;
   height: 500px;
   box-shadow: 0 10px 15px rgba(0, 0, 0, 0.25);
@@ -9,11 +9,11 @@
   &__options-group {
     width: 100%;
     height: 58px;
-    border-bottom: 2px solid #657395;
+    border-bottom: 2px solid var(--text);
   }
 
   &__option {
-    background: #28334e;
+    background: var(--placeholder-text);
     display: inline-block;
     width: 50%;
     height: 58px;
@@ -25,7 +25,7 @@
   }
 
   &__option-inner {
-    background: var(--transparent);
+    background: transparent;
     width: 75%;
     height: 58px;
     margin: 0 auto;
@@ -49,7 +49,7 @@
   }
 
   & > * {
-    background: var(--transparent);
+    background: transparent;
   }
 
   &__error-message {
@@ -57,20 +57,20 @@
     font-size: calc(var(--gap) * 2.5);
     flex: 1;
     display: flex;
-    background: var(--transparent);
+    background: transparent;
     justify-content: center;
     align-items: center;
     min-height: calc(var(--gap) * 6);
   }
 
   &__group {
-    background: var(--transparent);
+    background: transparent;
     margin-bottom: 11px;
     position: relative;
   }
 
   &__error {
-    background: var(--transparent);
+    background: transparent;
     margin-top: 5px;
     color: var(--color-red);
   }
@@ -81,7 +81,7 @@
     left: 10px;
     padding: 2px 6px;
     border-radius: 2px;
-    background: #1e2841;
+    background: var(--main-bg);
     color: var(--sign-in-label-color);
   }
 
@@ -112,8 +112,8 @@
   &__button {
     margin-left: 0;
     height: 40px;
-    background: var(--button-primary);
     border: none;
+    background: var(--button-normal);
     border-radius: 3px;
     font-style: normal;
     font-weight: normal;
@@ -125,12 +125,12 @@
   }
 
   &__loader {
-    background: var(--transparent);
+    background: transparent;
     min-height: calc(var(--gap) * 6);
   }
 
   &__button-wrapper {
-    background: var(--transparent);
+    background: transparent;
     min-height: calc(var(--gap) * 28);
     display: flex;
     flex-direction: column;
@@ -155,7 +155,7 @@
       height: 50px;
       padding: 0 10px;
       font-size: 12px;
-      border: 1px solid #737f92;
+      border: 1px solid var(--placeholder-text);
       box-sizing: border-box;
       border-radius: 4px;
     }
@@ -167,7 +167,7 @@
     align-items: center;
 
     & > * {
-      background: var(--transparent);
+      background: transparent;
     }
 
     &-create {
@@ -182,11 +182,11 @@
 
   &__checkbox {
     word-wrap: break-word;
-    background: var(--transparent);
+    background: transparent;
 
     .cr-checkbox__checkitem {
       border: 1px solid var(--sign-up-checkbox-mark-color);
-      background: var(--transparent);
+      background: transparent;
 
       &::after {
         border-color: var(--sign-up-checkbox-mark-color);
@@ -194,14 +194,14 @@
     }
 
     input:checked ~ .cr-checkbox__checkitem {
-      background-color: var(--transparent);
+      background-color: transparent;
     }
 
     .cr-checkbox__label {
       white-space: normal;
       padding-top: 0;
       font-size: 12px;
-      background: var(--transparent);
+      background: transparent;
       color: var(--sign-up-checkbox-color);
     }
   }
@@ -210,35 +210,37 @@
     position: absolute;
     bottom: -10px;
     width: 100%;
-    background: var(--transparent);
+    background: transparent;
 
     .cr-sign-in-form__bottom-section-password {
-      background: var(--transparent);
+      background: transparent;
       font-style: normal;
       font-weight: normal;
       line-height: 30px;
       font-size: 14px;
-      color: #737f92;
+      color: var(--placeholder-text);
       cursor: pointer;
+      opacity: 0.8;
       text-align: center;
 
       &:hover {
-        color: #98a5b9;
+        opacity: 1;
       }
     }
 
     .cr-sign-in-form__bottom-section-resend-confirmation {
-      background: var(--transparent);
+      background: transparent;
       font-style: normal;
       font-weight: normal;
       line-height: 30px;
       font-size: 14px;
-      color: #737f92;
+      color: var(--placeholder-text);
       cursor: pointer;
+      opacity: 0.8;
       text-align: center;
 
       &:hover {
-        color: #98a5b9;
+        opacity: 1;
       }
     }
   }
