--- a/src/index.pcss
+++ b/src/index.pcss
@@ -164,7 +164,7 @@ body {
     }
 
     td {
-      background: var(--transparent);
+      background: transparent;
       font-size: 1em !important;
       padding-top: calc(var(--gap) * 1.38) !important;
       padding-bottom: calc(var(--gap) * 1.38) !important;
@@ -238,8 +238,8 @@ body {
 
 .react-resizable-handle {
   border: 5px solid var(--grid-resizable-border-color) !important;
-  border-left-color: var(--transparent) !important;
-  border-top-color: var(--transparent) !important;
+  border-left-color: transparent !important;
+  border-top-color: transparent !important;
   cursor: nwse-resize !important;
   opacity: 0.5 !important;
   z-index: 9999;
@@ -283,7 +283,7 @@ body {
 
 input:-webkit-autofill {
   width: 100%;
-  background: var(--transparent) !important;
+  background: transparent !important;
 }
 
 ::-webkit-scrollbar {
