--- a/src/screens/ProfileScreen/ProfileScreen.pcss
+++ b/src/screens/ProfileScreen/ProfileScreen.pcss
@@ -42,7 +42,7 @@
       margin-bottom: calc(var(--gap) * 2);
 
       p {
-        color: #E8AF59;
+        color: var(--pending);
         margin-right: calc(var(--gap) * 2);
       }
     }
@@ -328,7 +328,7 @@
         width: 70%;
 
         &__button {
-          background: var(--transparent);
+          background: transparent;
         }
 
         input {
@@ -344,7 +344,7 @@
 
   .cr-copyable-text-field {
     &__input {
-      background: var(--transparent);
+      background: transparent;
     }
   }
 
