--- a/src/components/EmailForm/EmailForm.pcss
+++ b/src/components/EmailForm/EmailForm.pcss
@@ -121,14 +121,14 @@
 
   &__button-wrapper {
     background: transparent;
-    min-height: calc(var(--gap) * 28);
+    bottom: 0 !important;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    position: relative;
-    right: 0;
-    bottom: 0 !important;
+    justify-content: center;
     left: 0;
+    min-height: calc(var(--gap) * 28);
+    position: absolute;
+    right: 0;
   }
 
   &__button-wrapper--empty {
