Feature: add kyc updates (#31)
Fix: change profile screen for lvl 3 user
Fix: add decimal format to withdrawal limits and deposit limits, don't render withdrawal and deposit limits at 3 level KYC, change withdrawal endpoint
Fix: show alerts, when label KYC or documents is denied
Feature: add questionnaire
Feature: add data storage module
Feature: connect questionnaire to data storage
Feature: add validation to inputs
Feature: change KYC levels
Fix: change proof residence date
Fix: change display of user abilities
Feature: add modal window for first login
Feature: add closing modal buy outside click
Fix: correct redirection to confirm, code style polish
Fix: change kyc modal styles

--- a/src/custom/styles/containers/ProfilePartial.pcss
+++ b/src/custom/styles/containers/ProfilePartial.pcss
@@ -121,7 +121,7 @@
             align-items: center;
             background-color: var(--base-bright);
             border: 1px solid var(--kyc-grey);
-            border-radius: calc(var(--gap) * 0.6);
+            border-radius: 4px;
             color: var(--kyc-grey);
             height: 49px;
             margin-top: calc(var(--gap) * 1.3);
