--- a/src/custom/styles/containers/ProfileVerification.pcss
+++ b/src/custom/styles/containers/ProfileVerification.pcss
@@ -45,7 +45,7 @@
     &__line {
       border-bottom: 1px solid var(--placeholder-text);
       height: 13px;
-      width: 83px;
+      width: 55px;
     }
   }
 
@@ -69,6 +69,10 @@
     flex-direction: column;
     justify-content: flex-start;
     margin-bottom: 77px;
+
+    &--blank {
+      margin-bottom: 10px;
+    }
 
     span {
       align-items: center;
