--- a/src/custom/styles/containers/style.pcss
+++ b/src/custom/styles/containers/style.pcss
@@ -11,3 +11,4 @@
 @import "./ProfilePartial.pcss";
 @import "./ProfileVerification.pcss";
 @import "./ProgressLabel.pcss";
+@import "./Questionnaire.pcss";
