--- a/src/custom/styles/containers/Documents.pcss
+++ b/src/custom/styles/containers/Documents.pcss
@@ -1,91 +1,113 @@
-.pg-confirm__content-documents-col-row {
-  &-content {
-    input {
-      font-size: 12px;
-    }
+.pg-confirm__content {
+  &-documents-col-row {
+    &-content {
+      input {
+        font-size: 12px;
+      }
 
-    legend {
-      font-size: 12px;
-      top: -10px;
-    }
-  }
-
-  &-content-2 {
-    color: var(--color-white);
-    font-size: 14px;
-    font-weight: normal;
-    line-height: 14px;
-
-    &-documents {
-      margin-bottom: 5px;
-
-      &-label-item {
-        .active {
-          font-size: 10px;
-          line-height: 11px;
-          margin-top: 30px;
-          margin-bottom: 20px;
-          opacity: 0.5;
-        }
-
-        .muted {
-          color: var(--placeholder-text);
-          opacity: 0.5;
-        }
+      legend {
+        font-size: 12px;
+        top: -10px;
       }
     }
 
-    &__expiration {
-      color: var(--placeholder-text);
-      font-size: 10px;
+    &-content-2 {
+      color: var(--color-white);
+      font-size: 14px;
+      font-weight: normal;
       line-height: 14px;
+
+      &-documents {
+        margin-bottom: 5px;
+
+        &-label-item {
+          .active {
+            font-size: 10px;
+            line-height: 11px;
+            margin-top: 30px;
+            margin-bottom: 20px;
+            opacity: 0.5;
+          }
+
+          .muted {
+            color: var(--placeholder-text);
+            opacity: 0.5;
+          }
+        }
+      }
+
+      &__expiration {
+        color: var(--placeholder-text);
+        font-size: 10px;
+        line-height: 14px;
+      }
+    }
+
+    &-content-3 {
+      font-size: 12px;
+
+      .pg-confirm__content-documents-col-row-content-label {
+        margin-top: -9px;
+      }
+
+      .cr-dropdown__input-label {
+        font-size: 12px;
+        line-height: 49px;
+      }
+      
+      .cr-dropdown__list {
+        font-size: 12px;
+        margin-top: -17px;
+      }
     }
   }
 
-  &-content-3 {
+  &__questionnaire-label {
+    align-items: center;
+    color: var(--color-white);
+    display: flex;
     font-size: 12px;
+    font-weight: normal;
+    padding: 5px 24px 30px 24px;
+    width: 100%;
 
-    .pg-confirm__content-documents-col-row-content-label {
-      margin-top: -9px;
-    }
-
-    .cr-dropdown__input-label {
-      font-size: 12px;
-      line-height: 49px;
-    }
-    
-    .cr-dropdown__list {
-      font-size: 12px;
-      margin-top: -17px;
+    span {
+      color: var(--accent);
     }
   }
 }
 
 @media screen and (max-width: 768px) {
-  .pg-confirm__content-documents-col {
-    max-width: 100%;
+  .pg-confirm__content {
+    &-documents-col {
+      max-width: 100%;
 
-    &-row {
-      display: flex;
-      flex-direction: column;
-      width: 100%;
-
-      fieldset {
-        width: 100%;
-      }
-
-      &-content-3 {
+      &-row {
+        display: flex;
+        flex-direction: column;
         width: 100%;
 
-        .cr-dropdown__input-icon {
-          line-height: 30px;
-        }
-
-        .cr-dropdown__list {
-          margin-top: -18px;
+        fieldset {
           width: 100%;
         }
+
+        &-content-3 {
+          width: 100%;
+
+          .cr-dropdown__input-icon {
+            line-height: 30px;
+          }
+
+          .cr-dropdown__list {
+            margin-top: -18px;
+            width: 100%;
+          }
+        }
       }
+    }
+
+    &__questionnaire-label {
+      display: inline-block;
     }
   }
 }
