--- a/src/plugins/ieo/components/Blur/Blur.pcss
+++ b/src/plugins/ieo/components/Blur/Blur.pcss
@@ -16,6 +16,7 @@
       align-items: center;
       color: var(--white);
       display: flex;
+      font-family: 'Noto Sans SC';
       font-size: 18px;
       font-style: normal;
       font-weight: normal;
@@ -29,6 +30,7 @@
       align-items: center;
       color: var(--white);
       display: flex;
+      font-family: 'Noto Sans SC';
       font-size: 40px;
       font-style: normal;
       font-weight: bold;
