--- a/src/plugins/ieo/components/LoginBlur/LoginBlur.pcss
+++ b/src/plugins/ieo/components/LoginBlur/LoginBlur.pcss
@@ -2,7 +2,7 @@
   &__content {
     &__login {
       align-items: center;
-      color: var(--white);
+      color: var(--color-white);
       display: flex;
       font-style: normal;
       font-weight: normal;
@@ -37,7 +37,7 @@
       font-weight: normal;
       font-size: 12px;
       line-height: 12px;
-      color: var(--white);
+      color: var(--color-white);
       text-align: center;
       position: absolute;
       right: 0;
