--- a/src/custom/styles/components/DeniedModal.pcss
+++ b/src/custom/styles/components/DeniedModal.pcss
@@ -36,7 +36,7 @@
       flex-direction: row;
       justify-content: center;
       padding: 12px;
-      color: var(--white);
+      color: var(--color-white);
       font-size: 16px;
     }
 
