--- a/src/custom/styles/components/KYCLoginModal.pcss
+++ b/src/custom/styles/components/KYCLoginModal.pcss
@@ -8,7 +8,7 @@
   width: 100%;
   justify-content: center;
   align-items: center;
-  z-index: 10;
+  z-index: 10000;
   min-height: calc(100% - 72px);
 
   &--visible {
@@ -47,7 +47,7 @@
       flex-direction: row;
       justify-content: center;
       padding: 12px;
-      color: var(--white);
+      color: var(--color-white);
       font-size: 16px;
     }
 
