Change font => IBMPlexSans

--- a/src/index.pcss
+++ b/src/index.pcss
@@ -29,6 +29,11 @@
   --border-radius: 5px;
 }
 
+* {
+  font-family: Roboto;  
+
+}
+
 input[type=text], input[type=button] {   
   -webkit-appearance: none;
   -moz-appearance: none;
